# distributed-process-zmq

./: distributed-process-zeromq.cabal
examples/: test1.hs  weather.hs
src/Control/Distributed/Process/: ChannelEx.hs
src/Control/Distributed/Process/Backend/: ZMQ.hs
src/Control/Distributed/Process/Backend/ZMQ/: Channel.hs  Missing.hs
