name:                distributed-process-zeromq
version:             0.1.0.0
synopsis:            Distributed process zeromq
-- description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Vershilov
maintainer:          alexander.vershilov@tweag.io
copyright:           2014, Tweag EURL
category:            Control
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Control.Distributed.Process.Backend.ZMQ
                       Control.Distributed.Process.Backend.ZMQ.Channel
                       Control.Distributed.Process.ChannelEx
  other-modules:       Control.Distributed.Process.Backend.ZMQ.Missing
  other-extensions:    DeriveDataTypeable
  build-depends:       base == 4.*,
                       data-accessor,
                       zeromq4-haskell,
                       distributed-process >= 0.4,
                       binary >= 0.7,
                       stm,
                       transformers >= 0.3,
                       async >= 2.0,
                       bytestring >= 0.10,
                       network-transport >= 0.3.0.1,
                       network-transport-zeromq >= 0.1.1,
                       containers,
                       semigroups
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

-- executable example1
--    main-is:            test1.hs
--    build-depends:      base == 4.*,
--                        distributed-process >= 0.4,
--                        distributed-process-zeromq,
--                        network-transport-zeromq,
--                        network-transport-tcp,
--                        network-transport,
--                        zeromq4-haskell,
--                        semigroups
--    hs-source-dirs:     examples
--    default-language:   Haskell2010

-- executable weather
--    main-is:            weather.hs
--    build-depends:      base == 4.*,
--                        distributed-process >= 0.4,
--                        distributed-process-zeromq,
--                        network-transport-zeromq,
--                        network-transport-tcp,
--                        network-transport,
--                        zeromq4-haskell,
--                        semigroups,
--                        random,
--                        bytestring
--    hs-source-dirs:     examples
--    default-language:   Haskell2010

